src/App.css
.container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  background: #f2f2f2;
}

.banner {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  width:auto;
  background: #000000;
  color: #ffffff;
  font-size: 24px;
  font-weight: bold;
}

.loader {
  border: 6px solid #c3c3c3; /* Light grey */
  border-top: 6px solid #3498db; /* Blue */
  border-radius: 50%;
  width: 40px;
  height: 40px;
  animation: spin 2s linear infinite;
  margin-left: 10px;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.dot-typing {
  position: relative;
  left: -9999px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #9880ff;
  color: #9880ff;
  box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  animation: dot-typing 1.5s infinite linear;
}

@keyframes dot-typing {
  0% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
  16.667% {
    box-shadow: 9984px -10px 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
  33.333% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
  50% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px -10px 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
  66.667% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
  83.333% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px -10px 0 0 #9880ff;
  }
  100% {
    box-shadow: 9984px 0 0 0 #9880ff, 9999px 0 0 0 #9880ff, 10014px 0 0 0 #9880ff;
  }
}


.form {
  display: flex;
  flex-direction: column;
  background: #ffffff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
}

.label {
  font-size: 16px;
  margin-bottom: 10px;
  color: rgb(10, 31, 31);
  font-weight:bold;
  padding-bottom: 5cqmax;
}

.greeting-qsn{
  font-size: 30px;
  color: #179ef7;
}

.description{
  color:#000000;
}

.input {
  padding: 10px;
  font-size: 16px;
  border-radius: 5px;
  border: 2px solid #000000;
  margin-bottom: 20px;
  width: 80vw;
  height: 150px;
  text-transform: none;
  overflow-y: scroll;
  white-space: normal;
}



input::first-letter {
  text-transform: capitalize;
}

.button {
  background: #000000;
  color: #ffffff;
  width:max-content;
  padding: 10px 20px;
  border-radius: 5px;
  border: none;
  font-size: 16px;
  cursor: pointer;
  align-items: left;
}

.error {
  color: red;
  margin-top: 20px;
}

.message-box {
  background: #ffffff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
  
}

.message-text {
  font-size: 20px;
  color:brown;
  font-weight: bold;
  padding-left: 20px;
  padding-right: 200px;
  text-align: justify;
}

